--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
+    "antd": "^4.14.0",
+    "framer-motion": "^4.0.0",
     "react": "^17.0.1",
     "react-countdown": "^2.3.1",
     "react-dom": "^17.0.1",
