--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,7 @@
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "uuid": "^8.3.2"
+    "uuidv4": "^6.2.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
