--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-mongo-sanitize": "^2.1.0",
     "express-validator": "^6.10.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.4",
@@ -17,7 +18,8 @@
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "uuidv4": "^6.2.7"
+    "uuidv4": "^6.2.7",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
