--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "normalize-url": "^7.0.0",
     "uuidv4": "^6.2.7",
     "xss-clean": "^0.1.1"
   },
