--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.1.0",
     "express-validator": "^6.10.0",
+    "glob-parent": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.4",
     "mongoose": "^5.11.18",
