--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "antd": "^4.16.7",
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
+    "react-canvas-draw": "^1.1.1",
     "react-dom": "^17.0.2",
     "react-highlight-words": "^0.17.0",
     "react-router-dom": "^5.2.0",
